syntax = "proto3";

message MeshList{
	repeated MeshProto Meshes = 1;
}

message MeshProto {
	repeated ProtoVector3 Vertices = 1;
	repeated int32 Triangles = 2;
}

message ProtoVector3 {
	float X = 1;
	float Y = 2;
	float Z = 3;
}

